--- a/style.css
+++ b/style.css
@@ -4,31 +4,29 @@
   }
 }
 
+.portfolio-body .sub-header {
+  font-weight: 700;
+}
 .portfolio-body body {
   background-color: #FDFDFD;
 }
-
 .portfolio-body h3, .portfolio-body p, .portfolio-body li, .portfolio-body a {
   line-height: 1.5;
 }
-
 .portfolio-body h1 {
   font-family: "Source Sans Pro", sans-serif;
   color: #2C3E50;
   font-size: 3rem;
   font-weight: 400;
 }
-
 @media only screen and (max-width: 768px) {
   .portfolio-body h1 {
     font-size: 2.5rem;
   }
 }
-
 .portfolio-body h1.bold, .portfolio-body h1 .bold {
   font-weight: 700;
 }
-
 .portfolio-body h2 {
   font-family: "Source Sans Pro", sans-serif;
   color: #364CEA;
@@ -36,37 +34,35 @@
   font-weight: 700;
   text-transform: uppercase;
   text-align: right;
+  margin-top: 4px;
 }
-
 @media only screen and (max-width: 768px) {
   .portfolio-body h2 {
     text-align: left;
     margin-bottom: 50px;
   }
 }
-
 .portfolio-body h3, .portfolio-body .h3 {
   font-family: "Source Sans Pro", sans-serif;
   color: #2C3E50;
-  font-size: 1rem;
+  font-size: 1.3rem;
+  line-height: 1.6rem;
   font-weight: 700;
 }
-
 .portfolio-body p {
   font-family: "Source Sans Pro", sans-serif;
   color: #2C3E50;
   font-size: 1rem;
   font-weight: 400;
+  text-align: justify;
 }
-
 .portfolio-body p.alt-txt {
   font-family: "Inconsolata", monospace;
+  white-space: nowrap;
 }
-
 .portfolio-body a {
   position: relative;
   display: block;
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   font-family: "Source Sans Pro", sans-serif;
@@ -76,49 +72,38 @@
   font-weight: 400;
   border-bottom: 1px solid #FDFDFD;
 }
-
 .portfolio-body a.h3 {
   color: #2C3E50;
 }
-
 .portfolio-body a.h3:before {
   border-bottom: 1px solid #2C3E50;
 }
-
 .portfolio-body a.h3:after {
   border-color: #2C3E50;
 }
-
 .portfolio-body a:hover {
   cursor: pointer;
 }
-
 .portfolio-body a:hover:before {
   width: 110%;
   opacity: 1;
-  -webkit-transition: width 1s cubic-bezier(0.3, 0, 0.22, 0.99), opacity 0.1s linear 0s;
   transition: width 1s cubic-bezier(0.3, 0, 0.22, 0.99), opacity 0.1s linear 0s;
 }
-
 .portfolio-body a:hover:after {
-  -webkit-transform: rotate(315deg) translateY(6px) translateX(6px);
-          transform: rotate(315deg) translateY(6px) translateX(6px);
+  transform: rotate(315deg) translateY(6px) translateX(6px);
 }
-
 .portfolio-body a:before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -2px;
   border-bottom: 1px solid #364CEA;
   height: 1px;
   width: 0%;
   opacity: 0;
-  -webkit-transition: width 1s cubic-bezier(0.79, 0, 0.64, 0.99), opacity 0.1s linear 1s;
   transition: width 1s cubic-bezier(0.79, 0, 0.64, 0.99), opacity 0.1s linear 1s;
 }
-
 .portfolio-body a:after {
-  content: '';
+  content: "";
   width: 1px;
   height: 1px;
   padding: 2px;
@@ -130,61 +115,47 @@
   display: inline-block;
   transform: rotate(315deg);
   -webkit-transform: rotate(315deg);
-  -webkit-transition: -webkit-transform 1s cubic-bezier(0.6, 0, 0.5, 1);
-  transition: -webkit-transform 1s cubic-bezier(0.6, 0, 0.5, 1);
   transition: transform 1s cubic-bezier(0.6, 0, 0.5, 1);
-  transition: transform 1s cubic-bezier(0.6, 0, 0.5, 1), -webkit-transform 1s cubic-bezier(0.6, 0, 0.5, 1);
   border-color: #364CEA;
 }
-
+.portfolio-body ul {
+  list-style: inherit;
+}
 .portfolio-body ul li {
   font-family: "Source Sans Pro", sans-serif;
   color: #2C3E50;
   font-size: 1rem;
   font-weight: 400;
+  text-align: justify;
+  margin-bottom: 8px;
 }
-
-.portfolio-body ul li:before {
-  content: '-';
-  padding-right: 10px;
-}
-
 .portfolio-body .accent {
   color: #364CEA;
 }
-
 .portfolio-body .mt-big {
   margin-top: 70px !important;
 }
-
 .portfolio-body .mt-med {
   margin-top: 50px !important;
 }
-
 .portfolio-body .mt-sml {
   margin-top: 20px !important;
 }
-
 .portfolio-body .mt-xsml {
   margin-top: 3px !important;
 }
-
 .portfolio-body .mb-big {
   margin-bottom: 70px !important;
 }
-
 .portfolio-body .mt-links {
   margin-top: 70px;
 }
-
 .portfolio-body .show-mob {
   display: none;
 }
-
 .portfolio-body .show-tablet {
   display: none;
 }
-
 @media only screen and (max-width: 500px) {
   .portfolio-body .show-mob {
     display: block;
@@ -193,7 +164,6 @@
     display: none;
   }
 }
-
 @media only screen and (max-width: 768px) {
   .portfolio-body .show-tablet {
     display: block;
@@ -202,31 +172,25 @@
     display: none;
   }
 }
-
 .portfolio-body .page-container {
   width: 100%;
   height: 100vh;
   position: relative;
   overflow-x: hidden;
 }
-
 .portfolio-body .page-container .col {
   width: 1000px;
   margin: 0px auto 0px auto;
 }
-
 @media only screen and (max-width: 1000px) {
   .portfolio-body .page-container .col {
     width: 100vw;
   }
 }
-
 .portfolio-body .page-container .col .grid {
-  display: -ms-grid;
   display: grid;
   height: 100vh;
 }
-
 .portfolio-body #loading-overlay {
   width: 100%;
   height: 100vh;
@@ -235,36 +199,17 @@
   left: 0;
   background-color: white;
   z-index: 1;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  grid-template-columns: 1fr;
   justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .portfolio-body #loading-overlay.animate {
-  -webkit-animation-name: loading-done;
-          animation-name: loading-done;
-  -webkit-animation-duration: .5s;
-          animation-duration: .5s;
-  -webkit-animation-timing-function: cubic-bezier(0.8, 0, 0.2, 1);
-          animation-timing-function: cubic-bezier(0.8, 0, 0.2, 1);
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+  animation-name: loading-done;
+  animation-duration: 0.5s;
+  animation-timing-function: cubic-bezier(0.8, 0, 0.2, 1);
+  animation-fill-mode: forwards;
 }
-
-@-webkit-keyframes loading-done {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
 @keyframes loading-done {
   0% {
     opacity: 1;
@@ -273,194 +218,130 @@
     opacity: 0;
   }
 }
-
 .portfolio-body #loader {
   font-size: 6rem;
-  -webkit-transform: rotate(28deg) skew(-25deg);
-          transform: rotate(28deg) skew(-25deg);
+  transform: rotate(28deg) skew(-25deg);
   margin-right: -35px;
 }
-
 .portfolio-body #loader h1 {
   margin: -1.1rem;
-  -webkit-animation-name: loading-txt;
-          animation-name: loading-txt;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
-  -webkit-animation-timing-function: cubic-bezier(0.8, 0, 0.2, 1);
-          animation-timing-function: cubic-bezier(0.8, 0, 0.2, 1);
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
+  animation-name: loading-txt;
+  animation-duration: 2s;
+  animation-timing-function: cubic-bezier(0.8, 0, 0.2, 1);
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
-
 @media only screen and (max-width: 768px) {
   .portfolio-body #loader h1 {
     margin: -0.8rem;
   }
 }
-
 .portfolio-body #loader :nth-child(1) {
-  -webkit-animation-delay: -0s;
-          animation-delay: -0s;
+  animation-delay: 0s;
 }
-
 .portfolio-body #loader :nth-child(2) {
-  -webkit-animation-delay: -.2s;
-          animation-delay: -.2s;
+  animation-delay: -0.2s;
 }
-
 .portfolio-body #loader :nth-child(3) {
-  -webkit-animation-delay: -.4s;
-          animation-delay: -.4s;
+  animation-delay: -0.4s;
 }
-
 .portfolio-body #loader :nth-child(4) {
-  -webkit-animation-delay: -.6s;
-          animation-delay: -.6s;
+  animation-delay: -0.6s;
 }
-
 .portfolio-body #loader :nth-child(5) {
-  -webkit-animation-delay: -.8s;
-          animation-delay: -.8s;
+  animation-delay: -0.8s;
 }
-
 .portfolio-body #loader :nth-child(6) {
-  -webkit-animation-delay: -1s;
-          animation-delay: -1s;
+  animation-delay: -1s;
 }
-
 .portfolio-body #loader :nth-child(7) {
-  -webkit-animation-delay: -1.2s;
-          animation-delay: -1.2s;
+  animation-delay: -1.2s;
 }
-
 .portfolio-body #loader :nth-child(8) {
-  -webkit-animation-delay: -1.4s;
-          animation-delay: -1.4s;
+  animation-delay: -1.4s;
 }
-
 .portfolio-body #loader :nth-child(9) {
-  -webkit-animation-delay: -1.6s;
-          animation-delay: -1.6s;
+  animation-delay: -1.6s;
 }
-
 .portfolio-body #loader :nth-child(10) {
-  -webkit-animation-delay: -1.8s;
-          animation-delay: -1.8s;
+  animation-delay: -1.8s;
 }
-
-@-webkit-keyframes loading-txt {
-  0% {
-    opacity: .1;
-    -webkit-transform: translateX(-10px) translateY(-10px);
-            transform: translateX(-10px) translateY(-10px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(10px) translateY(10px);
-            transform: translateX(10px) translateY(10px);
-  }
-}
-
 @keyframes loading-txt {
   0% {
-    opacity: .1;
-    -webkit-transform: translateX(-10px) translateY(-10px);
-            transform: translateX(-10px) translateY(-10px);
+    opacity: 0.1;
+    transform: translateX(-10px) translateY(-10px);
   }
   100% {
     opacity: 1;
-    -webkit-transform: translateX(10px) translateY(10px);
-            transform: translateX(10px) translateY(10px);
+    transform: translateX(10px) translateY(10px);
   }
 }
-
 .portfolio-body .landing-grid {
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr .6fr;
-      grid-template-rows: 1fr .6fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 0.6fr;
   max-width: 100vw;
 }
-
 @media only screen and (max-width: 500px) {
   .portfolio-body .landing-grid {
-    -ms-grid-rows: initial;
-        grid-template-rows: initial;
+    grid-template-rows: initial;
   }
 }
-
 .portfolio-body .landing-grid #lottie-char {
   position: absolute;
   top: -150px;
   right: -725px;
   width: 1450px;
-  -webkit-transform: scaleX(-1);
-          transform: scaleX(-1);
+  transform: scaleX(-1);
   z-index: -1;
 }
-
 @media only screen and (min-height: 900px) {
   .portfolio-body .landing-grid #lottie-char {
     top: -5%;
   }
 }
-
 @media only screen and (max-width: 768px) {
   .portfolio-body .landing-grid #lottie-char {
-    -webkit-transform: scaleX(-1);
-            transform: scaleX(-1);
+    transform: scaleX(-1);
     bottom: 0;
     left: 0;
   }
 }
-
 @media only screen and (max-width: 1200px) {
   .portfolio-body .landing-grid #lottie-char {
     right: -60%;
   }
 }
-
 @media only screen and (min-width: 1200px) {
   .portfolio-body .landing-grid #lottie-char {
     right: -60%;
   }
 }
-
 @media only screen and (min-width: 1350px) {
   .portfolio-body .landing-grid #lottie-char {
     right: -50%;
   }
 }
-
 @media only screen and (min-width: 1500px) {
   .portfolio-body .landing-grid #lottie-char {
     right: -40%;
   }
 }
-
 @media only screen and (min-width: 1800px) {
   .portfolio-body .landing-grid #lottie-char {
     right: -30%;
   }
 }
-
 @media only screen and (min-width: 2100px) {
   .portfolio-body .landing-grid #lottie-char {
     right: -20%;
   }
 }
-
 .portfolio-body .landing-grid #lottie-mob {
   position: relative;
   width: 275vw;
   margin: -35vw 0 0 -38vw;
-  -webkit-transform: scaleX(-1);
-          transform: scaleX(-1);
+  transform: scaleX(-1);
 }
-
 @media only screen and (max-width: 500px) {
   .portfolio-body .landing-grid h1 {
     max-width: calc(100vw - 80px);
@@ -468,49 +349,35 @@
     margin-left: 40px;
   }
 }
-
 @media only screen and (max-width: 370px) {
   .portfolio-body .landing-grid h1 {
     font-size: 2.5rem;
   }
 }
-
 .portfolio-body .landing-txt {
-  -ms-flex-item-align: end;
-      -ms-grid-row-align: end;
-      align-self: end;
+  align-self: end;
   margin-left: 70px;
 }
-
 .portfolio-body .arrow-wrapper {
-  -ms-grid-column-align: center;
-      justify-self: center;
-  -ms-flex-item-align: end;
-      -ms-grid-row-align: end;
-      align-self: end;
+  justify-self: center;
+  align-self: end;
   width: 40px;
   height: 40px;
   margin-bottom: 20px;
   cursor: pointer;
 }
-
 .portfolio-body .arrow-wrapper:hover .arrow:before {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
   margin-top: 30px;
 }
-
 .portfolio-body .arrow-wrapper:hover .arrow:after {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  transform: rotate(-45deg);
   margin-top: 30px;
 }
-
 .portfolio-body .arrow-wrapper .arrow {
   display: block;
   position: relative;
 }
-
 .portfolio-body .arrow-wrapper .arrow:before, .portfolio-body .arrow-wrapper .arrow:after {
   position: absolute;
   left: 50%;
@@ -520,190 +387,131 @@
   background-color: #2C3E50;
   border-radius: 1px;
   margin-top: 20px;
-  -webkit-transition: margin-top 0.8s ease-in-out, -webkit-transform 0.8s cubic-bezier(0.78, 0, 0.22, 1);
-  transition: margin-top 0.8s ease-in-out, -webkit-transform 0.8s cubic-bezier(0.78, 0, 0.22, 1);
   transition: transform 0.8s cubic-bezier(0.78, 0, 0.22, 1), margin-top 0.8s ease-in-out;
-  transition: transform 0.8s cubic-bezier(0.78, 0, 0.22, 1), margin-top 0.8s ease-in-out, -webkit-transform 0.8s cubic-bezier(0.78, 0, 0.22, 1);
 }
-
 .portfolio-body .arrow-wrapper .arrow:before {
-  content: '';
+  content: "";
   margin-left: -12px;
-  -webkit-transform: rotate(-135deg);
-          transform: rotate(-135deg);
+  transform: rotate(-135deg);
 }
-
 .portfolio-body .arrow-wrapper .arrow:after {
-  content: '';
+  content: "";
   margin-left: -2px;
-  -webkit-transform: rotate(135deg);
-          transform: rotate(135deg);
+  transform: rotate(135deg);
 }
-
 .portfolio-body .portfolio-container {
   width: 100%;
   height: 100%;
   position: relative;
   overflow: hidden;
 }
-
 .portfolio-body .portfolio-container .col {
   width: 1000px;
   margin: 0px auto 0px auto;
 }
-
 @media only screen and (max-width: 1000px) {
   .portfolio-body .portfolio-container .col {
     width: 100vw;
   }
 }
-
 .portfolio-body .portfolio-container .col .grid-row {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 2fr;
-      grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 2fr;
   grid-column-gap: 50px;
   height: 100%;
   position: relative;
 }
-
 @media only screen and (max-width: 1080px) {
   .portfolio-body .portfolio-container .col .grid-row {
     margin: 0 40px 0 40px;
   }
 }
-
 @media only screen and (max-width: 768px) {
   .portfolio-body .portfolio-container .col .grid-row {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
     grid-column-gap: 50px;
   }
 }
-
 .portfolio-body .portfolio-container .col .grid-row .item-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin-top: 4px;
 }
-
 @media only screen and (max-width: 768px) {
   .portfolio-body .portfolio-container .col .grid-row .item-list {
     margin-left: 60px;
   }
 }
-
 .portfolio-body .portfolio-container .col .grid-row .item-list .item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
 .portfolio-body .portfolio-container .col .grid-row .item-list .item .item-right {
   max-width: 65%;
 }
-
 @media only screen and (max-width: 500px) {
   .portfolio-body .portfolio-container .col .grid-row .item-list .item .item-right {
     max-width: 100%;
   }
 }
-
 @media only screen and (max-width: 500px) {
   .portfolio-body .portfolio-container .col .grid-row .item-list .item .item-left {
     display: none;
   }
 }
-
 .portfolio-body .portfolio-container .col .grid-row .item-list .link-col {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
 .portfolio-body .portfolio-container .col .grid-row .toolkit-col {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 2fr;
-      grid-template-columns: 1fr 1fr 2fr;
+  grid-template-columns: 1fr 1fr 2fr;
   grid-column-gap: 10px;
 }
-
 @media only screen and (max-width: 768px) {
   .portfolio-body .portfolio-container .col .grid-row .toolkit-col {
     margin-left: 60px;
   }
 }
-
 .portfolio-body .portfolio-container .col .grid-row .toolkit-col .tools-col {
   margin-left: 10px;
 }
-
 .portfolio-body .portfolio-container .col .grid-row .toolkit-col h3 {
   text-transform: uppercase;
 }
-
 .portfolio-body .portfolio-container .col .grid-row .app-mockup {
   position: absolute;
   margin-top: 70px;
   width: 45%;
   left: -100px;
-  -webkit-transform: unset;
-          transform: unset;
-  -webkit-transition: -webkit-transform 1s cubic-bezier(0.6, 0, 0.5, 1);
-  transition: -webkit-transform 1s cubic-bezier(0.6, 0, 0.5, 1);
+  transform: unset;
   transition: transform 1s cubic-bezier(0.6, 0, 0.5, 1);
-  transition: transform 1s cubic-bezier(0.6, 0, 0.5, 1), -webkit-transform 1s cubic-bezier(0.6, 0, 0.5, 1);
 }
-
 @media only screen and (max-width: 1200px) {
   .portfolio-body .portfolio-container .col .grid-row .app-mockup {
     width: 40%;
     left: -60px;
   }
 }
-
 @media only screen and (max-width: 1020px) {
   .portfolio-body .portfolio-container .col .grid-row .app-mockup {
     width: 35%;
     left: 0px;
   }
 }
-
 .portfolio-body .portfolio-container .col .grid-row .app-mockup:hover {
-  -webkit-transform: translateY(-15px);
-          transform: translateY(-15px);
+  transform: translateY(-15px);
 }
-
 .portfolio-body .portfolio-container .col .grid-row .app-mockup-tablet {
   width: 170%;
   margin-left: -45%;
   margin-bottom: -70px;
 }
-
 .portfolio-body .portfolio-container .col .grid-row .contact-icons {
   max-width: 40px;
   margin-left: auto;
 }
-
 .portfolio-body .portfolio-container .col .grid-row .contact-icons img {
   width: 100%;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
