--- a/style.scss
+++ b/style.scss
@@ -102,6 +102,9 @@ html {
 
 			&:after {
 				border-color: $text-color;
+				width: 4px;
+				height: 4px;
+				padding: 2px;
 			}
 		}
 
@@ -491,7 +494,7 @@ html {
 		overflow: hidden;
 
 		.col {
-			width: 1000px;
+			width: 1300px;
 			margin: 0px auto 0px auto;
 
 			@media only screen and (max-width: 1000px) {
@@ -500,7 +503,7 @@ html {
 
 			.grid-row {
 				display: grid;
-				grid-template-columns: 1fr 2fr;
+				grid-template-columns: 1fr 3fr;
 				grid-column-gap: 50px;
 				height: 100%;
 				position: relative;
@@ -598,6 +601,7 @@ html {
 
 				.contact-icons {
 					max-width: 40px;
+					width: 40px;
 					margin-left: auto;
 
 					img {
